--- a/views/index.hbs
+++ b/views/index.hbs
@@ -117,7 +117,9 @@
                 <span class="text-dark">No estás registrado?
                     <span class="pe-2 ps-1"><a href="#" class="text-success" data-bs-toggle="modal" data-bs-target="#RegistroModal" data-bs-dismiss="modal">Registrate</a></span>
                 </span>
-                <button type="submit" value="registrarse" target="_self" class="btn btn-danger">INGRESAR</button>
+                <button type="submit" value="registrarse" target="_self" class="btn btn-danger">
+                    <a href="/usuarios" style='color: rgb(255, 255, 255)'> INGRESAR</a>
+                    </button>
             </div>
         </div>
     </div>
