--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,7 +9,7 @@
                     </div>
                     <div class="col-6 text-end pe-4">
                         <a href="" data-bs-toggle="modal" data-bs-target="#LoginModal"><div class="btn btn-outline-light my-4 headerBt">
-                            {{title}}
+                            {{nombre}}
                         </div></a>
                         {{!-- <button type="button" class="btn btn-outline-light border-dark m-2" data-bs-toggle="modal" data-bs-target="#RegistroModal">REGISTRO</button> --}}
                     </div>
